[gd_scene load_steps=2 format=3 uid="uid://bhwe54hnrs333"]

[ext_resource type="Script" uid="uid://c5t1xi6s5mtrq" path="res://Scripts/Login/Register.gd" id="1_q1oww"]

[node name="Register" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q1oww")

[node name="RegisterPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -150.0
offset_right = 248.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="RegisterPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.502
anchor_top = 0.5
anchor_right = 0.502
anchor_bottom = 0.5
offset_left = -31.992
offset_top = -124.0
offset_right = 32.008
offset_bottom = -101.0
text = "Register"

[node name="Label2" type="Label" parent="RegisterPanel"]
layout_mode = 0
offset_left = 64.0
offset_top = 80.0
offset_right = 153.0
offset_bottom = 103.0
text = "Username :"

[node name="Label3" type="Label" parent="RegisterPanel"]
layout_mode = 0
offset_left = 64.0
offset_top = 144.0
offset_right = 148.0
offset_bottom = 167.0
text = "Password :"

[node name="UsernameText" type="LineEdit" parent="RegisterPanel"]
layout_mode = 0
offset_left = 200.0
offset_top = 80.0
offset_right = 464.0
offset_bottom = 112.0

[node name="PasswordText" type="LineEdit" parent="RegisterPanel"]
layout_mode = 0
offset_left = 200.0
offset_top = 144.0
offset_right = 464.0
offset_bottom = 176.0

[node name="CancelButton" type="Button" parent="RegisterPanel"]
layout_mode = 0
offset_left = 64.0
offset_top = 232.0
offset_right = 192.0
offset_bottom = 264.0
text = "Cancel"

[node name="RegisterButton" type="Button" parent="RegisterPanel"]
layout_mode = 0
offset_left = 312.0
offset_top = 232.0
offset_right = 440.0
offset_bottom = 264.0
text = "Register"

[connection signal="pressed" from="RegisterPanel/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="RegisterPanel/RegisterButton" to="." method="_on_register_button_pressed"]
